# DiceReader

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/instructions/: code_editing_instructions.instructions.md
DiceReader/utils/: camera_capture.py
dicereader/application/: __init__.py  orchestrator.py  predictor.py
dicereader/application/test/: test_predictor.py
dicereader/domain/: camera.py  dumper.py  model.py
dicereader/scripts/: detect_dice.py  dice_result_labeler.py  die_type_labeler.py  manual_labeler.py  train_die_result_models.py  train_efficientnet.py
dicereader/utils/: camera_capture.py  dumper.py
