[tool.poetry]
name = "dicereader"
version = "0.1.0"
description = ""
authors = ["Jamie Poston <tigerbounces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
easyocr = "*"
torch = "^2.4.0"
torchvision = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
